Fix issues
Fix navbar not showing, image overflowing

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -64,6 +64,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .button {
@@ -91,7 +92,6 @@
   margin: 8px;
   font-size: 0.6rem;
   font-weight: bold;
-  color: #806600;
 }
 
 @media screen and (max-width: 960px) {
@@ -99,10 +99,6 @@
     height: auto;
     border-radius: 10px;
     margin: 4px;
-  }
-
-  .card-link {
-    width: auto;
   }
 
   .button {
